trunk/Archive2/03/f74408de66f5f4/output
main.cpp:8:1: error: expected unqualified-id before 'while'
 while (iii<=5)
 ^
